--- a/BugTracker/BugTracker.csproj
+++ b/BugTracker/BugTracker.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,9 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Custom Content\**" />
     <Compile Remove="Documentation\**" />
+    <Content Remove="Custom Content\**" />
     <Content Remove="Documentation\**" />
+    <EmbeddedResource Remove="Custom Content\**" />
     <EmbeddedResource Remove="Documentation\**" />
+    <None Remove="Custom Content\**" />
     <None Remove="Documentation\**" />
   </ItemGroup>
 
@@ -26,4 +30,4 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
   </ItemGroup>
 
-</Project>
+</Project>  
