--- a/BugTracker/appsettings.json
+++ b/BugTracker/appsettings.json
@@ -1,6 +1,7 @@
 {
+
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-BugTracker-49FD6DAB-9710-4A37-A5B7-A288C58EE6FE;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\ProjectsV13;Initial Catalog=DBBugTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
