Changed delete functionality, updated database removal method

--- a/BugTracker/appsettings.json
+++ b/BugTracker/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\ProjectsV13;Initial Catalog=DBBugTracker;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=DBBugTracker;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Logging": {
     "LogLevel": {
@@ -12,3 +12,4 @@
   },
   "AllowedHosts": "*"
 }
+
