--- a/BugTracker/Properties/launchSettings.json
+++ b/BugTracker/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "iisSettings": {
-    "windowsAuthentication": false,
+    "windows": false,
     "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:55059",
